# verda

./: .gitignore  .hlint.yaml  ChangeLog.md  LICENSE  LICENSE.md  README.md  cabal.project  package.yaml  stack.yaml  verda.cabal
assets/dhall/: asset.dhall  texture.dhall
examples/shmup/: Main.hs
libraries/verda-assets/: verda-assets.cabal
libraries/verda-assets/test/Verda/Asset/: BundleSpec.hs  InternalSpec.hs
libraries/verda-utils/: verda-utils.cabal
src/Verda/: App.hs  Asset.hs  World.hs
src/Verda/App/: Internal.hs  System.hs
src/Verda/Asset/: Bundle.hs  HotReload.hs  Internal.hs  Interop.hs  Path.hs  Types.hs
src/Verda/Component/: Entity.hs  Global.hs
src/Verda/Data/: Components.hs  Timer.hs
src/Verda/Event/: Components.hs  Control.hs  Handler.hs
src/Verda/Event/Control/: Internal.hs
src/Verda/Graphics/: Camera.hs  Color.hs  Components.hs  SDL.hs  Texture.hs
src/Verda/Graphics/Vulkan/: Buffers.hs  Device.hs  GraphicsPipeline.hs  Internal.hs  RenderPass.hs  Shader.hs  Swapchain.hs  Types.hs  Vertex.hs  Window.hs
src/Verda/System/: Renderer.hs  Window.hs
src/Verda/Util/: Apecs.hs  Container.hs  Dhall.hs  Error.hs  Logger.hs  Template.hs  Types.hs
test/: Main.hs
test/Verda/: AppSpec.hs  WorldSpec.hs
test/Verda/App/: SystemSpec.hs
test/Verda/Asset/: BundleSpec.hs  InternalSpec.hs  PathSpec.hs
test/Verda/Event/Control/: InternalSpec.hs
test/Verda/Graphics/: ColorSpec.hs  TextureSpec.hs
test/Verda/Test/: Utils.hs
test/Verda/Util/: ContainerSpec.hs
test/assets/: icon.tex.dhall  icon.tga
