cabal-version:      3.6
name:               verda
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license-file:       LICENSE.md
author:             Erin Torno
maintainer:         erintorno@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-extensions
    ghc-options: -Wall -Werror -Wincomplete-record-updates -Wredundant-constraints -Wincomplete-uni-patterns
    if os(windows)
        ghc-options: -optl-mconsole -optl-mwindows
    default-extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        ExplicitForAll
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedLabels
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators

library
    import:           common-extensions
    build-depends:    base             ^>=4.14.3.0
                    , apecs            ^>=0.9
                    , bytestring       ^>=0.11
                    , containers       ^>=0.6
                    , data-default     ^>=0.7
                    , dhall            ^>=1.40
                    , exceptions       ^>=0.10
                    , filepath         ^>=1.4
                    , fsnotify         ^>=0.3
                    , hashable         ^>=1.4
                    , hashtables       ^>=1.3
                    , linear           ^>=1.21
                    , managed          ^>=1.0
                    , mtl              ^>=2.2
                    , primitive        ^>=0.7
                    , say              ^>=0.1
                    , sdl2             ^>=2.5
                    , sdl2-image       ^>=2.0
                    , template-haskell ^>=2.16
                    , text             ^>=1.2
                    , vector           ^>=0.12
                    , vector-th-unbox  ^>=0.2
                    , vulkan           ^>=3.15
                    , vulkan-utils     ^>=0.5.5
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  Verda.App
                      Verda.App.Internal
                      Verda.Asset
                      Verda.Asset.Bundle
                      Verda.Asset.Internal
                      Verda.Asset.Interop
                      Verda.Asset.Path
                      Verda.Asset.Types
                      Verda.Data.Components
                      Verda.Data.Timer
                      Verda.Event.Components
                      Verda.Event.Control
                      Verda.Event.Control.Internal
                      Verda.Event.Handler
                      Verda.Graphics.Camera
                      Verda.Graphics.Color
                      Verda.Graphics.Components
                      Verda.Graphics.SDL
                      Verda.Graphics.Texture
                      Verda.Graphics.Vulkan.Buffers
                      Verda.Graphics.Vulkan.Device
                      Verda.Graphics.Vulkan.GraphicsPipeline
                      Verda.Graphics.Vulkan.Internal
                      Verda.Graphics.Vulkan.RenderPass
                      Verda.Graphics.Vulkan.Shader
                      Verda.Graphics.Vulkan.Vertex
                      Verda.Graphics.Vulkan.Window
                      Verda.System.Renderer
                      Verda.Util.Apecs
                      Verda.Util.Container
                      Verda.Util.Error
                      Verda.Util.Logger
                      Verda.Util.Template
                      Verda.Util.Types
                      Verda.World

executable examples-shmup
    import:           common-extensions
    main-is:          Main.hs
    other-modules:    Paths_verda
    hs-source-dirs:   examples/shmup
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base ^>=4.14.3.0
                    , verda
                    , apecs            ^>=0.9
                    , data-default     ^>=0.7
                    , sdl2             ^>=2.5
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite verda-test
    import:           common-extensions
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Spec
                      Verda.AppSpec
                      Verda.Asset.BundleSpec
                      Verda.Asset.InternalSpec
                      Verda.Asset.PathSpec
                      Verda.Event.Control.InternalSpec
                      Verda.Graphics.ColorSpec
                      Verda.Graphics.TextureSpec
                      Verda.Test.Utils
                      Verda.Util.ContainerSpec
                      Paths_verda
    build-depends:    base ^>=4.14.3.0
                    , verda
                    , apecs            ^>=0.9
                    , bytestring       ^>=0.11
                    , containers       ^>=0.6
                    , data-default     ^>=0.7
                    , dhall            ^>=1.40
                    , hspec            ^>=2.9
                    , HUnit            ^>=1.6.2
                    , mtl              ^>=2.2
                    , sdl2             ^>=2.5
                    , text             ^>=1.2
                    , vector           ^>=0.12
    default-extensions: NegativeLiterals
    hs-source-dirs:     test
    default-language:   Haskell2010
    build-tool-depends: hspec-discover:hspec-discover == 2.*

