cabal-version:      3.6
name:               verda-assets
version:            0.1.0.0
license-file:       ../../LICENSE.md
author:             Erin Torno
maintainer:         erintorno@gmail.com

common common-extensions
    ghc-options: -Wall -Werror -Wincomplete-record-updates -Wredundant-constraints -Wincomplete-uni-patterns
    default-extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        ExplicitForAll
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedLabels
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators

library
    import:           common-extensions
    build-depends:    base             ^>=4.14.3.0
                    , verda-utils
                    , apecs            ^>=0.9
                    , bytestring       ^>=0.11
                    , containers       ^>=0.6
                    , data-default     ^>=0.7
                    , dhall            ^>=1.40
                    , exceptions       ^>=0.10
                    , filepath         ^>=1.4
                    , fsnotify         ^>=0.3
                    , hashable         ^>=1.4
                    , hashtables       ^>=1.3
                    , mtl              ^>=2.2
                    , primitive        ^>=0.7
                    , text             ^>=1.2
                    , time             ^>=1.11
                    , vector           ^>=0.12
    hs-source-dirs:   library
    default-language: Haskell2010
    exposed-modules:  Verda.Asset
                      Verda.Asset.Bundle
                      Verda.Asset.Internal
                      Verda.Asset.Interop
                      Verda.Asset.Path
                      Verda.Asset.Types

test-suite verda-assets-test
    import:           common-extensions
    type:             exitcode-stdio-1.0
    build-depends:    base ^>=4.14.3.0
                    , verda-assets
                    , containers       ^>=0.6
                    , data-default     ^>=0.7
                    , hspec            ^>=2.9
                    , HUnit            ^>=1.6.2
                    , mtl              ^>=2.2
                    , text             ^>=1.2
                    , vector           ^>=0.12
    main-is:          Spec.hs
    other-modules:    Verda.Asset.BundleSpec
                      Verda.Asset.InternalSpec
                      Verda.Asset.PathSpec
    hs-source-dirs:     test
    default-language:   Haskell2010
    build-tool-depends: hspec-discover:hspec-discover == 2.*
