cabal-version:      3.6
name:               verda-utils
version:            0.1.0.0
license-file:       ../../LICENSE.md
author:             Erin Torno
maintainer:         erintorno@gmail.com

common common-extensions
    ghc-options: -Wall -Werror -Wincomplete-record-updates -Wredundant-constraints -Wincomplete-uni-patterns
    default-extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        ExplicitForAll
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedLabels
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators

library
    import:           common-extensions
    build-depends:    base             ^>=4.14.3.0
                    , apecs            ^>=0.9
                    , containers       ^>=0.6
                    , data-default     ^>=0.7
                    , primitive        ^>=0.7
                    , text             ^>=1.2
                    , time             ^>=1.11
                    , vector           ^>=0.12
    hs-source-dirs:   library
    default-language: Haskell2010
    exposed-modules:  Verda.Util.Apecs
                      Verda.Util.Container
                      Verda.Util.Logger
                      Verda.Util.Types

test-suite verda-utils-test
    import:           common-extensions
    type:             exitcode-stdio-1.0
    build-depends:    base ^>=4.14.3.0
                    , verda-utils
                    , containers       ^>=0.6
                    , hspec            ^>=2.9
    main-is:          Spec.hs
    other-modules:    Verda.Util.ContainerSpec
    hs-source-dirs:     test
    default-language:   Haskell2010
    build-tool-depends: hspec-discover:hspec-discover == 2.*
